--- a/testapp/Base.lproj/Main.storyboard
+++ b/testapp/Base.lproj/Main.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="lZT-mv-zYd">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -20,26 +22,49 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="BasicCell" textLabel="tiu-eZ-0Ap" detailTextLabel="dfm-pZ-7f8" style="IBUITableViewCellStyleSubtitle" id="Oe5-Zg-j5s">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CustomCell" rowHeight="60" id="Oe5-Zg-j5s" customClass="CustomCell" customModule="testapp" customModuleProvider="target">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Oe5-Zg-j5s" id="zvl-gd-8KG">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="tiu-eZ-0Ap">
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UrA-C1-bhb">
+                                                    <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="UrA-C1-bhb" secondAttribute="height" multiplier="1:1" id="Ren-tw-6rh"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mHz-Z2-DRg">
+                                                    <rect key="frame" x="70" y="8" width="522" height="23"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="18"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dfm-pZ-7f8">
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GHi-yD-LPD">
+                                                    <rect key="frame" x="70" y="36" width="522" height="19.5"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="GHi-yD-LPD" firstAttribute="leading" secondItem="UrA-C1-bhb" secondAttribute="trailing" constant="10" id="2KD-ek-VOz"/>
+                                                <constraint firstItem="mHz-Z2-DRg" firstAttribute="leading" secondItem="UrA-C1-bhb" secondAttribute="trailing" constant="10" id="5it-oa-L8z"/>
+                                                <constraint firstItem="UrA-C1-bhb" firstAttribute="leading" secondItem="zvl-gd-8KG" secondAttribute="leading" id="7NN-Fk-Bfs"/>
+                                                <constraint firstItem="GHi-yD-LPD" firstAttribute="top" secondItem="mHz-Z2-DRg" secondAttribute="bottom" constant="4.5" id="CMa-XN-1Lp"/>
+                                                <constraint firstAttribute="bottom" secondItem="GHi-yD-LPD" secondAttribute="bottom" constant="4" id="EXv-7t-eRj"/>
+                                                <constraint firstItem="mHz-Z2-DRg" firstAttribute="trailing" secondItem="zvl-gd-8KG" secondAttribute="trailingMargin" id="V5o-n9-ZEw"/>
+                                                <constraint firstItem="mHz-Z2-DRg" firstAttribute="top" secondItem="zvl-gd-8KG" secondAttribute="topMargin" id="Y3x-po-I3v"/>
+                                                <constraint firstAttribute="bottom" secondItem="UrA-C1-bhb" secondAttribute="bottom" id="bUH-a3-eYw"/>
+                                                <constraint firstItem="UrA-C1-bhb" firstAttribute="top" secondItem="zvl-gd-8KG" secondAttribute="top" id="fsf-od-Pb1"/>
+                                                <constraint firstAttribute="trailing" secondItem="GHi-yD-LPD" secondAttribute="trailing" constant="8" id="vkC-4P-KfD"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="userImageView" destination="UrA-C1-bhb" id="PrC-CG-9oe"/>
+                                            <outlet property="userUrlLabel" destination="GHi-yD-LPD" id="aaY-Uc-JIn"/>
+                                            <outlet property="usernameLabel" destination="mHz-Z2-DRg" id="exE-qx-TN6"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <sections/>
@@ -57,12 +82,64 @@
                             <constraint firstAttribute="trailing" secondItem="c6e-Sh-zjc" secondAttribute="trailing" id="iBZ-Lm-zvm"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Aea-12-Aqn"/>
                     <connections>
                         <outlet property="tableView" destination="c6e-Sh-zjc" id="a6A-6l-nbf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1144" y="355"/>
+        </scene>
+        <!--User Detail View Controller-->
+        <scene sceneID="GRF-Wm-vTh">
+            <objects>
+                <viewController storyboardIdentifier="UserDetailViewController" id="Had-B5-GNZ" customClass="UserDetailViewController" customModule="testapp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="hrI-eC-msa"/>
+                        <viewControllerLayoutGuide type="bottom" id="FVQ-Lc-vVI"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="0Tl-Dn-RXd">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="toC-tr-TXh">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="toC-tr-TXh" firstAttribute="leading" secondItem="0Tl-Dn-RXd" secondAttribute="leading" id="3bI-Qt-N0R"/>
+                            <constraint firstAttribute="trailing" secondItem="toC-tr-TXh" secondAttribute="trailing" id="RDl-Ur-586"/>
+                            <constraint firstItem="toC-tr-TXh" firstAttribute="top" secondItem="0Tl-Dn-RXd" secondAttribute="top" id="s9B-7l-5hN"/>
+                            <constraint firstItem="FVQ-Lc-vVI" firstAttribute="top" secondItem="toC-tr-TXh" secondAttribute="bottom" id="yjm-vd-B3E"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="userImageView" destination="toC-tr-TXh" id="bDs-6o-vyN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WDQ-m8-aR8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1822" y="355"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ELt-Dj-Cas">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="lZT-mv-zYd" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2kW-wC-ozI">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="EXu-7k-z4X"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sbF-tk-sUr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="332" y="355"/>
         </scene>
     </scenes>
 </document>
